<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="add_play_list">Новый плейлист</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="description_btn_back">Кнопка назад</string>
    <string name="Media">Медиатека</string>
    <string name="Setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="Share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_course">https://practicum.yandex.ru/android-developer</string>
    <string name="link_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_developer">volkov.dimaya@yandex.ru</string>
    <string name="send_developer_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="send_developer_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="error_no_content">Ничего не нашлось</string>
    <string name="error_no_favourites">Ваша медиатека пуста</string>
    <string name="error_no_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="error_no_internet">Проблемы со связью \n\nЗагрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="btn_update">Обновить</string>
    <string name="btn_new_play_list">Новый плейлист</string>
    <string name="unknown">Неизвестно</string>
    <string name="clear_history">Очистить историю</string>
    <string name="text_search_history">Вы искали</string>
    <string name="mode_theme">Темная тема</string>

    <string name="text_country">Страна</string>
    <string name="text_genre">Жанр</string>
    <string name="text_year">Год</string>
    <string name="text_album">Альбом</string>
    <string name="text_duration">Длительность</string>
    <string name="image_resolution">512x512bb.jpg</string>
    <string name="toast_error">Ошибка</string>

    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="image_add_playlist">изображение добавить плей лист</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="btn_create_playlist">Создать</string>
    <string name="btn_save_playlist">Сохранить</string>
    <string name="cancle">Отмена</string>
    <string name="message_data_lose">Все несохраненные данные будут потеряны</string>
    <string name="title_complite_playlist">Завершить создание плейлиста?</string>
    <string name="exit">Завершить</string>
    <string name="image_playlist">изображение плейлиста</string>
    <string name="add_playlist_button_sheet">Добавить в плейлист</string>
    <string name="delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="yes">Удалить</string>
    <string name="no">Отмена</string>
    <string name="share">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="dialog_delete_playlist_message">Хотите удалить плейлист %1$s?</string>
    <string name="dialog_delete_playlist">Удалить плейлист</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="message_empty_playlist">В этом плейлисте нет треков!</string>
    <string name="delete_track_in_playlist">Хотите удалить трек?</string>
    <string name="title_delete_track_playlist">Удалить трек</string>
</resources>