<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sheet_playlist"
    android:orientation="vertical"
    >

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/bottomsheet_view" />

    <LinearLayout
        android:paddingHorizontal="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/image_playlist"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageSheet"
            />
        <LinearLayout
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:paddingTop="4dp"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:text="Best songs 2021"
                android:textColor="@color/color_item"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:text="98 треков"
                android:textColor="@color/item_setting"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        style="@style/TextPlaylistMore"
        android:id="@+id/share_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        />
    <TextView
        style="@style/TextPlaylistMore"
        android:id="@+id/edit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        />

    <TextView
        style="@style/TextPlaylistMore"
        android:id="@+id/delete_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_playlist"
        />

</LinearLayout>

