<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tint="@color/color_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center|start"
            android:text="@string/add_play_list"
            android:textColor="@color/color_title"
            android:textSize="@dimen/text_size" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/border_image_add_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/image_add_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/image_add_playlist"
            android:contentDescription="@string/image_add_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:textSize="16sp"
        android:id="@+id/name_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:ellipsize="end"
        android:background="@drawable/border_add_playlist_edit_text"
        android:hint="@string/name_playlist"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="19dp"
        android:textColorHint="#1A1B22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        android:id="@+id/name_description_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_add_playlist_edit_text"
        android:hint="@string/description_playlist"
        android:paddingHorizontal="16dp"
        android:paddingTop="18dp"
        android:paddingBottom="19dp"
        android:textColorHint="#1A1B22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_playlist" />

    <androidx.appcompat.widget.AppCompatButton
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:layout_width="0dp"
        android:background="@drawable/btn_add_playlist"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_playlist"
        android:backgroundTint="#AEAFB4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>