<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="@dimen/main_side_margins"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/main_side_margins"
        />

    <Button
        android:layout_marginTop="@dimen/main_side_margins"
        android:id="@+id/btn_search"
        android:textSize="@dimen/text_size"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/main_btn_content"
        app:iconGravity="textStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cornerRadius="@dimen/corner_radius_btn"
        android:backgroundTint="@color/white"
        android:textColor="@color/main_btn_content"
        android:text="@string/Search" />

    <Button
        app:cornerRadius="@dimen/corner_radius_btn"
        android:id="@+id/btn_media_library"
        app:icon="@drawable/ic_media"
        app:iconTint="@color/main_btn_content"
        app:iconGravity="textStart"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="16dp"
        android:textColor="@color/main_btn_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/Media" />

    <Button
        app:cornerRadius="@dimen/corner_radius_btn"
        android:layout_marginTop="16dp"
        android:id="@+id/btn_setting"
        app:icon="@drawable/ic_setting"
        app:iconTint="@color/main_btn_content"
        app:iconGravity="textStart"
        android:textColor="@color/main_btn_content"
        android:textSize="@dimen/text_size"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Setting"
        android:layout_marginBottom="@dimen/main_side_margins"/>

</LinearLayout>