<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tint="@color/color_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center|start"
            android:text="@string/edit_playlist"
            android:textColor="@color/color_title"
            android:textSize="@dimen/text_size" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_image_add_playlist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/border_image_add_playlist"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/default_image_add_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_add_playlist"
            android:contentDescription="@string/image_add_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.imageview.ShapeableImageView
            app:shapeAppearanceOverlay="@style/RoundedImage"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:id="@+id/image_add_playlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_add_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_playlist_layout"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_image_add_playlist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_playlist"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_playlist"
            android:textColor="@color/edt_add_player"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_description_playlist"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_playlist_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_playlist"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_playlist"
            android:textColor="@color/edt_add_player"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_playlist"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:layout_width="0dp"
        android:background="@drawable/btn_add_playlist_create_select"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>