<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tint="@color/color_title"
        app:navigationIcon="@drawable/ic_btn_back"
        >
        <TextView
            android:id="@+id/Setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:text="@string/search"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/color_title"
            android:textSize="@dimen/text_size"/>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/side_margins"
        android:layout_marginBottom="@dimen/standard_margins"
        android:background="@drawable/background_line_search"
        app:cornerRadius="@dimen/standard_margins"
        >
        <ImageView
            android:layout_gravity="start|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search_icon"
            android:layout_marginVertical="@dimen/search_layout_vertical"
            android:layout_marginStart="@dimen/search_layout_horizontal"
            />

        <EditText
            android:paddingHorizontal="@dimen/search_padding_horizontal"
            android:layout_gravity="center"
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/line_search_color"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/search_layout_vertical"
            android:layout_marginEnd="@dimen/search_layout_horizontal"
            android:src="@drawable/clearsearch"
            android:visibility="gone" />

    </FrameLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/error_no_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/search_place_holder_padding_top"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/search_place_holder_resolution"
            android:layout_height="@dimen/search_place_holder_resolution"
            android:src="@drawable/no_content"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_no_content"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/error_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/search_place_holder_padding_top"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/search_place_holder_resolution"
            android:layout_height="@dimen/search_place_holder_resolution"
            android:src="@drawable/no_internet" />

        <TextView
            android:gravity="center"
            style="@style/SearchErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_no_internet"/>

        <Button
            style="@style/ButtonUpdateSearch"
            android:id="@+id/btn_search_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>